Creates HTML skeleton
This commit creates the HTML skeleton.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,48 @@
 
 <body>
 
-    
+    <div id="container">
+
+        <div id="display">
+            <span id="result">0</span>
+        </div>
+
+        <div class="row">
+            <button>AC</button>
+            <button>+/-</button>
+            <button>%</button>
+            <button>/</button>
+        </div>
+
+        <div class="row">
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>*</button>
+        </div>
+
+        <div class="row">
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>-</button>
+        </div>
+
+        <div class="row">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>+</button>
+        </div>
+
+        <div class="row">
+            <button>0</button>
+            <button>.</button>
+            <button>=</button>
+        </div>
+
+    </div>
+
 </body>
 
 <script src="src/calculator.js"></script>
