--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
 
         <div class="row">
-            <button>AC</button>
+            <button id="clear-button">AC</button>
             <button>+/-</button>
             <button>%</button>
             <button>/</button>
@@ -44,9 +44,9 @@
         </div>
 
         <div class="row">
-            <button>0</button>
+            <button id="zero-button">0</button>
             <button>.</button>
-            <button>=</button>
+            <button id="equal-button">=</button>
         </div>
 
     </div>
