--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="container">
 
         <div id="display">
-            <span id="result">0</span>
+            <span id="value">0</span>
         </div>
 
         <div class="row">
@@ -23,29 +23,29 @@
         </div>
 
         <div class="row">
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
+            <button class="numeric-button">7</button>
+            <button class="numeric-button">8</button>
+            <button class="numeric-button">9</button>
             <button>*</button>
         </div>
 
         <div class="row">
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
+            <button class="numeric-button">4</button>
+            <button class="numeric-button">5</button>
+            <button class="numeric-button">6</button>
             <button>-</button>
         </div>
 
         <div class="row">
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
+            <button class="numeric-button">1</button>
+            <button class="numeric-button">2</button>
+            <button class="numeric-button">3</button>
             <button>+</button>
         </div>
 
         <div class="row">
-            <button id="zero-button">0</button>
-            <button>.</button>
+            <button class="numeric-button" id="zero-button">0</button>
+            <button class="numeric-button">.</button>
             <button id="equal-button">=</button>
         </div>
 
