Creates equalButton, operatorButtons. Modifies displayValue
This commit creates equalButton, operatorButtons and modifies displayValue function.

--- a/index.html
+++ b/index.html
@@ -19,28 +19,28 @@
             <button id="clear-button">AC</button>
             <button>+/-</button>
             <button>%</button>
-            <button>/</button>
+            <button class="operator-button">/</button>
         </div>
 
         <div class="row">
             <button class="numeric-button">7</button>
             <button class="numeric-button">8</button>
             <button class="numeric-button">9</button>
-            <button>*</button>
+            <button class="operator-button">*</button>
         </div>
 
         <div class="row">
             <button class="numeric-button">4</button>
             <button class="numeric-button">5</button>
             <button class="numeric-button">6</button>
-            <button>-</button>
+            <button class="operator-button">-</button>
         </div>
 
         <div class="row">
             <button class="numeric-button">1</button>
             <button class="numeric-button">2</button>
             <button class="numeric-button">3</button>
-            <button>+</button>
+            <button class="operator-button">+</button>
         </div>
 
         <div class="row">
