--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="row">
             <button id="clear-button">AC</button>
             <button>+/-</button>
-            <button>%</button>
+            <button class="percentage-button">%</button>
             <button class="operator-button">/</button>
         </div>
 
