Creates negative function
This commit creates toNegative()

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="row">
             <button id="clear-button">AC</button>
-            <button>+/-</button>
+            <button id="negative-button">+/-</button>
             <button class="percentage-button">%</button>
             <button class="operator-button">/</button>
         </div>
