Creates active key buttons
This commit adds active class for key buttons.

--- a/index.html
+++ b/index.html
@@ -16,37 +16,37 @@
         </div>
 
         <div class="row">
-            <button id="clear-button">AC</button>
+            <button id="clear-button" data-key="Delete">AC</button>
             <button id="negative-button">+/-</button>
             <button class="percentage-button">%</button>
-            <button class="operator-button">/</button>
+            <button class="operator-button" data-key="/">/</button>
         </div>
 
         <div class="row">
-            <button class="numeric-button">7</button>
-            <button class="numeric-button">8</button>
-            <button class="numeric-button">9</button>
-            <button class="operator-button">*</button>
+            <button class="numeric-button" data-key="7">7</button>
+            <button class="numeric-button" data-key="8">8</button>
+            <button class="numeric-button" data-key="9">9</button>
+            <button class="operator-button" data-key="*">*</button>
         </div>
 
         <div class="row">
-            <button class="numeric-button">4</button>
-            <button class="numeric-button">5</button>
-            <button class="numeric-button">6</button>
-            <button class="operator-button">-</button>
+            <button class="numeric-button" data-key="4">4</button>
+            <button class="numeric-button" data-key="5">5</button>
+            <button class="numeric-button" data-key="6">6</button>
+            <button class="operator-button" data-key="-">-</button>
         </div>
 
         <div class="row">
-            <button class="numeric-button">1</button>
-            <button class="numeric-button">2</button>
-            <button class="numeric-button">3</button>
-            <button class="operator-button">+</button>
+            <button class="numeric-button" data-key="1">1</button>
+            <button class="numeric-button" data-key="2">2</button>
+            <button class="numeric-button" data-key="3">3</button>
+            <button class="operator-button" data-key="+">+</button>
         </div>
 
         <div class="row">
-            <button class="numeric-button" id="zero-button">0</button>
-            <button class="numeric-button">.</button>
-            <button id="equal-button">=</button>
+            <button class="numeric-button" id="zero-button" data-key="0">0</button>
+            <button class="numeric-button" data-key=".">.</button>
+            <button id="equal-button" data-key="Enter">=</button>
         </div>
 
     </div>
